fix(ui): ensure ElementsPanel overlays navbar using z-index (#260)

--- a/src/styles/css/main.stylesheet.css
+++ b/src/styles/css/main.stylesheet.css
@@ -360,6 +360,7 @@ input[type='text']:focus {
     width: 240px;
     top: 90px;
     left: 10px;
+    z-index: 120;
 }
 
 .accordion > :last-child {
